--- a/i3/config
+++ b/i3/config
@@ -31,13 +31,16 @@ set $ws8  "8:VIII"
 set $ws9  "9:IX"
 set $ws10 "10:X"
 
+# commands
+set $nexec exec --no-startup-id
+
 
 ### Autostart ###
 
-exec --no-startup-id $HOME/autostart
+$nexec $HOME/autostart
 
 # notification daemon
-exec --no-startup-id dunst -frame_width 2 -frame_color "$acc" -fn "$font $size" -lb "$bg" -nb "$bg" -cb "$acc" -lf "$fg" -nf "$fg" -cf "$bg" -lto 3 -nto 5 -cto 0 -align "center" -padding 16 -horizontal_padding 16
+$nexec dunst -frame_width 2 -frame_color "$acc" -fn "$font $size" -lb "$bg" -nb "$bg" -cb "$acc" -lf "$fg" -nf "$fg" -cf "$bg" -lto 3 -nto 5 -cto 0 -align "center" -padding 16 -horizontal_padding 16
 
 
 ### Bar/window borders ###
@@ -128,19 +131,19 @@ bindsym $mod+t exec $term
 bindsym $mod+q kill
 
 # brightness keys
-bindsym XF86MonBrightnessDown exec --no-startup-id brightnessctl set 20%-
-bindsym XF86MonBrightnessUp exec --no-startup-id brightnessctl set +20%
+bindsym XF86MonBrightnessDown $nexec brightnessctl set 20%-
+bindsym XF86MonBrightnessUp $nexec brightnessctl set +20%
 
 # volume keys
-bindsym XF86AudioRaiseVolume exec --no-startup-id pactl set-sink-volume 0 +5%
-bindsym XF86AudioLowerVolume exec --no-startup-id pactl set-sink-volume 0 -5%
-bindsym XF86AudioMute exec --no-startup-id pactl set-sink-mute 0 toggle
+bindsym XF86AudioRaiseVolume $nexec pactl set-sink-volume 0 +5%
+bindsym XF86AudioLowerVolume $nexec pactl set-sink-volume 0 -5%
+bindsym XF86AudioMute $nexec pactl set-sink-mute 0 toggle
 
 # take screenshot
-bindsym Print exec --no-startup-id scrot; exec --no-startup-id notify-send "screenshot captured"
+bindsym Print $nexec scrot; $nexec notify-send "screenshot captured"
 
 # start dmenu (a program launcer)
-bindsym $mod+d exec --no-startup-id dmenu_run -i -nb "$bg" -nf "$fg" -sb "$acc" -sf "$bg" -fn "$font-$size"
+bindsym $mod+d $nexec dmenu_run -i -nb "$bg" -nf "$fg" -sb "$acc" -sf "$bg" -fn "$font-$size"
 
 # change focus
 bindsym $mod+h focus left
