Hmm remove acceleration, hmm... change something

--- a/xorg.conf.d/30-touchpad.conf
+++ b/xorg.conf.d/30-touchpad.conf
@@ -3,7 +3,7 @@ Section "InputClass"
 	Driver "libinput"
 	Option "ClickMethod" "clickfinger"
 	Option "NaturalScrolling" "true"
-	Option "Tapping" "on"
 	Option "HorizontalScrolling" "true"
-	Option "AccelProfile" "flat"
+	Option "Tapping" "on"
+	Option "TappingDrag" "on"
 EndSection
