--- a/i3status/config
+++ b/i3status/config
@@ -6,7 +6,7 @@ general {
 
 # order += "disk /"
 order += "wireless _first_"
-# order += "ethernet _first_"
+order += "ethernet _first_"
 order += "volume master"
 order += "battery 0"
 order += "tztime local"
@@ -17,9 +17,8 @@ wireless _first_ {
 }
 
 ethernet _first_ {
-        # if you use %speed, i3status requires the cap_net_admin capability
-        format_up = "E: %speed"
-        format_down = "E: down"
+        format_down = "Ethernet: up"
+        format_down = "Ethernet: down"
 }
 
 battery 0 {
