--- a/i3/config
+++ b/i3/config
@@ -1,7 +1,7 @@
 ### Variables ###
 
 # font
-set $font monospace
+set $font roboto
 set $size 10
 
 # colors
@@ -14,22 +14,32 @@ set_from_resource $red i3wm.color1 #ff0000
 set_from_resource $acc i3wm.foreground #ff8800
 
 # modifier key
-set $mod Mod4
+set $mod Mod1
 
 # terminal
 set $term urxvt
 
 # workspace names
-set $ws1  "1:I"
-set $ws2  "2:II"
-set $ws3  "3:III"
-set $ws4  "4:IV"
-set $ws5  "5:V"
-set $ws6  "6:VI"
-set $ws7  "7:VII"
-set $ws8  "8:VIII"
-set $ws9  "9:IX"
-set $ws10 "10:X"
+#set $ws1  "1:I"
+#set $ws2  "2:II"
+#set $ws3  "3:III"
+#set $ws4  "4:IV"
+#set $ws5  "5:V"
+#set $ws6  "6:VI"
+#set $ws7  "7:VII"
+#set $ws8  "8:VIII"
+#set $ws9  "9:IX"
+#set $ws10 "10:X"
+set $ws1  "1"
+set $ws2  "2"
+set $ws3  "3"
+set $ws4  "4"
+set $ws5  "5"
+set $ws6  "6"
+set $ws7  "7"
+set $ws8  "8"
+set $ws9  "9"
+set $ws10 "10"
 
 # commands
 set $nexec exec --no-startup-id
@@ -77,11 +87,17 @@ bar {
         statusline $fg
         separator $fg
 
-        focused_workspace  $acc $acc $bg
+        #focused_workspace  $acc $acc $bg
+        #active_workspace   $bg $bg $fg
+        #inactive_workspace $bg $bg $fg
+        #urgent_workspace   $red $red $white
+        #binding_mode       $acc $acc $bg
+
+        focused_workspace  $gray $gray $fg
         active_workspace   $bg $bg $fg
         inactive_workspace $bg $bg $fg
         urgent_workspace   $red $red $white
-        binding_mode       $acc $acc $bg
+        binding_mode       $gray $gray $fg
     }
 }
 
@@ -113,7 +129,7 @@ bindsym $mod+Shift+9 move container to workspace $ws9
 bindsym $mod+Shift+0 move container to workspace $ws10
 
 # reload the configuration file
-bindsym $mod+Shift+c reload
+#bindsym $mod+Shift+c reload
 
 # restart i3 inplace (preserves your layout/session, can be used to upgrade i3)
 bindsym $mod+Shift+r restart
@@ -126,10 +142,12 @@ floating_modifier $mod
 
 # start a terminal
 bindsym $mod+Return exec $term
+bindsym $mod+Shift+Return exec $term
 bindsym $mod+t exec $term
 
 # kill focused window
-bindsym $mod+q kill
+#bindsym $mod+q kill
+bindsym $mod+Shift+c kill
 
 # brightness keys
 bindsym $mod+Shift+d $nexec brightnessctl set 1%
@@ -145,8 +163,8 @@ bindsym XF86AudioMute $nexec pactl set-sink-mute @DEFAULT_SINK@ toggle
 bindsym Print $nexec scrot; $nexec notify-send "screenshot captured"
 
 # start dmenu (a program launcer)
-bindsym $mod+d $nexec dmenu_run -i -nb "$bg" -nf "$fg" -sb "$acc" -sf "$bg" -fn "$font-$size"
-bindsym $mod+p $nexec dmenu_run -i -nb "$bg" -nf "$fg" -sb "$acc" -sf "$bg" -fn "$font-$size"
+# bindsym $mod+d $nexec dmenu_run -i -nb "$bg" -nf "$fg" -sb "$acc" -sf "$bg" -fn "$font-$size"
+bindsym $mod+p $nexec dmenu_run -i -nb "$bg" -nf "$fg" -sb "$gray" -sf "$fg" -fn "$font-$size"
 
 # change focus
 bindsym $mod+h focus left
