--- a/i3/config
+++ b/i3/config
@@ -1,7 +1,7 @@
 ### Variables ###
 
 # font
-set $font roboto
+set $font monospace
 set $size 10
 
 # colors
@@ -61,20 +61,23 @@ font pango: $font $size
 # window border colors
 # the order is:         border background text  indicator child_border
 client.focused          $acc   $acc       $bg   $acc      $acc
-client.focused_inactive $gray  $gray      $bg   $gray     $gray
-client.unfocused        $gray  $gray      $bg   $gray     $gray
+client.focused_inactive $gray  $gray      $fg   $gray     $gray
+client.unfocused        $gray  $gray      $fg   $gray     $gray
 client.urgent           $red   $red       $bg   $red      $red
-client.placeholder      $gray  $gray      $bg   $gray     $gray
+client.placeholder      $gray  $gray      $fg   $gray     $gray
 client.background       $gray
 
 # hide borders when full screen
 hide_edge_borders smart
 
+title_align center
+
 # border width
 default_border pixel 2
 
-# print all window titles bold
-for_window [class=".*"] title_format "<b>%title</b>"
+# window title format
+#for_window [class=".*"] title_format "<b>%title</b>"
+for_window [class=".*"] title_format "%title"
 
 # bar colors
 bar {
