--- a/.tmux.conf
+++ b/.tmux.conf
@@ -4,3 +4,5 @@ set -sg escape-time 0
 # Start windows and panes at 1, not 0
 set -g base-index 1
 setw -g pane-base-index 1
+
+set-window-option -g mode-keys vi
