--- a/i3/config
+++ b/i3/config
@@ -96,11 +96,11 @@ bar {
         #urgent_workspace   $red $red $white
         #binding_mode       $acc $acc $bg
 
-        focused_workspace  $gray $gray $fg
+        focused_workspace  $fg $fg $bg
         active_workspace   $bg $bg $fg
         inactive_workspace $bg $bg $fg
         urgent_workspace   $red $red $white
-        binding_mode       $gray $gray $fg
+        binding_mode       $fg $fg $bg
     }
 }
 
@@ -166,8 +166,9 @@ bindsym XF86AudioMute $nexec pactl set-sink-mute @DEFAULT_SINK@ toggle
 bindsym Print $nexec scrot; $nexec notify-send "screenshot captured"
 
 # start dmenu (a program launcer)
-# bindsym $mod+d $nexec dmenu_run -i -nb "$bg" -nf "$fg" -sb "$acc" -sf "$bg" -fn "$font-$size"
-bindsym $mod+p $nexec dmenu_run -i -nb "$bg" -nf "$fg" -sb "$gray" -sf "$fg" -fn "$font-$size"
+#bindsym $mod+d $nexec dmenu_run -i -nb "$bg" -nf "$fg" -sb "$acc" -sf "$bg" -fn "$font-$size"
+#bindsym $mod+p $nexec dmenu_run -i -nb "$bg" -nf "$fg" -sb "$gray" -sf "$fg" -fn "$font-$size"
+bindsym $mod+p $nexec dmenu_run -i -nb "$bg" -nf "$fg" -sb "$fg" -sf "$bg" -fn "$font-$size"
 
 # change focus
 bindsym $mod+h focus left
