Improve tmux config
 - Make the status monochromatic
 - Make switching windows easier
 - Make creating windows easier

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -6,3 +6,10 @@ set -g base-index 1
 setw -g pane-base-index 1
 
 set-window-option -g mode-keys vi
+
+set -g status-style bg=black,fg=white
+set-window-option -g window-status-current-style fg=black,bg=white
+
+bind -n M-j next-window
+bind -n M-k previous-window
+bind -n M-Enter new-window
