--- a/.tmux.conf
+++ b/.tmux.conf
@@ -10,6 +10,10 @@ set-window-option -g mode-keys vi
 set -g status-style bg=black,fg=white
 set-window-option -g window-status-current-style fg=black,bg=white
 
+set -g status-justify centre
+set -g status-left ''
+set -g status-right ''
+
 bind -n M-j next-window
 bind -n M-k previous-window
 bind -n M-Enter new-window
