--- a/.tmux.conf
+++ b/.tmux.conf
@@ -14,6 +14,16 @@ set -g status-justify centre
 set -g status-left ''
 set -g status-right ''
 
+bind -n M-Enter new-window
 bind -n M-j next-window
 bind -n M-k previous-window
-bind -n M-Enter new-window
+bind -n M-1 select-window -t :=1
+bind -n M-2 select-window -t :=2
+bind -n M-3 select-window -t :=3
+bind -n M-4 select-window -t :=4
+bind -n M-5 select-window -t :=5
+bind -n M-6 select-window -t :=6
+bind -n M-7 select-window -t :=7
+bind -n M-8 select-window -t :=8
+bind -n M-9 select-window -t :=9
+bind -n M-0 select-window -t :=0
