Rice nvim & tmux

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -8,7 +8,9 @@ setw -g pane-base-index 1
 set-window-option -g mode-keys vi
 
 set -g status-style bg=black,fg=white
-set-window-option -g window-status-current-style fg=black,bg=white
+set -g window-status-current-style bg=white,fg=black
+set -g window-status-format " #I:#W "
+set -g window-status-current-format " #I:#W "
 
 set -g status-justify centre
 set -g status-left ''
