Improve tab navigation in nvim

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -17,8 +17,8 @@ set -g status-left ''
 set -g status-right ''
 
 bind -n M-Enter new-window
-bind -n M-j next-window
-bind -n M-k previous-window
+bind -n M-k next-window
+bind -n M-j previous-window
 bind -n M-1 select-window -t :=1
 bind -n M-2 select-window -t :=2
 bind -n M-3 select-window -t :=3
