--- a/.tmux.conf
+++ b/.tmux.conf
@@ -7,8 +7,8 @@ setw -g pane-base-index 1
 
 set-window-option -g mode-keys vi
 
-set -g status-style bg=default,fg=white
-set -g window-status-current-style bg=white,fg=black
+# set -g status-style bg=default,fg=white
+set -g window-status-current-style bold
 set -g window-status-format " #I:#W "
 set -g window-status-current-format " #I:#W "
 
