--- a/.tmux.conf
+++ b/.tmux.conf
@@ -7,7 +7,7 @@ setw -g pane-base-index 1
 
 set-window-option -g mode-keys vi
 
-# set -g status-style bg=default,fg=white
+set -g status-style bg=default,fg=default
 set -g window-status-current-style bold
 set -g window-status-format " #I:#W "
 set -g window-status-current-format " #I:#W "
