--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,3 +1,4 @@
+
 # Remove delay after ESC press
 set -sg escape-time 0
 
@@ -6,6 +7,7 @@ set -g base-index 1
 setw -g pane-base-index 1
 
 set-window-option -g mode-keys vi
+set -g default-terminal "xterm-256color"
 
 set -g status-style bg=default,fg=default
 set -g window-status-current-style bold
